Fixed index and project page view on mobile device

--- a/specialstyle.css
+++ b/specialstyle.css
@@ -28,3 +28,13 @@ img {
     margin-right: auto;
     width: 50%;
   }
+
+#snow {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    pointer-events: none;
+    z-index: 1000;
+}
