--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,11 @@
-body {
-    /* font-family: Arial, Helvetica, sans-serif;  */
-    font-family: 'Montserrat', sans-serif;
-   
-   margin: 0;
+
+body{
+    margin: 0%;
+}
+
+html{
+    background-image: linear-gradient(to bottom,rgb(42, 52, 84), rgba(70, 79, 119, 0.774));
+    font-family:sans-serif   
 }
 
 h2{
@@ -38,42 +41,34 @@ h2{
     color: black;
 }
 
-.homemain{
-    background-image: linear-gradient(to bottom,rgb(42, 52, 84), rgba(70, 79, 119, 0.774));
+/* .homemain{
     padding: 20px 10px;
     
-    
-}
+} */
 
 .homemain h1{
     color: white;
     text-shadow: 2px 2px 4px #000000;
-    font-size: 90px;
-    padding-left: 5%;
-    padding-top: 10px;
-    margin-bottom:0;
+    font-size: 60px;
     
     
     
 }
 
 .homemain h2{
-    float: left;
+    /* float: left; */
     text-shadow: 2px 2px 4px #000000;
-    width: 650px;
-    padding-left: 16%;
-    padding-right:5%;
-    padding-top: 10%;
+    width: 75%;
 }
 
 .homemain h3{
     color: white;
     text-shadow: 2px 2px 4px #000000;
-    padding-left: 6%;
+    
 }
 
 img {
-    display: block;
+    /* display: block; */
     border: 1px solid rgba(187, 184, 184, 0.438);
     max-width: 100%;
     width: clamp(100px,30%,400px);
@@ -87,19 +82,19 @@ img {
 
 
 .description {
-    padding:3%;
+    
     color: white;
     text-shadow: 2px 2px 4px #000000;
     background-color: rgb(1, 2, 5);
     
 }
 
-.description h1{
+/* .description h1{
     padding-left: 11%;
-}
+} */
 
 .description h2{
-    padding-left: 13%;
+    
     text-align: left;
     width: 75%;
 
@@ -119,7 +114,6 @@ img {
 
 .contactmain{
     text-align: center;
-    background-image: linear-gradient(to bottom,rgb(42, 52, 84), rgba(70, 79, 119, 0.774));
     padding: 20px 30px;
     color: white;
     padding-bottom: 30%;
@@ -133,30 +127,38 @@ img {
 /* PROJECTS PAGE */
 
 .projectsmain{
-    background-image: linear-gradient(to bottom,rgb(42, 52, 84), rgba(70, 79, 119, 0.774));
-    padding: 20px 30px;
     color: white;
-    padding-bottom: 20%;
-    
 }
+
 .project_row{
     text-align: left;
-    padding-left: 13%;
-    padding-bottom: 5%;
-    width: 70%;
+    padding-bottom: 3%;
+    
+    
     
 }
 
 .projectsmain h1{
     text-align: center;
     text-shadow: 2px 2px 4px #000000;
-    font-size: 90px;
+    width: 100%;
+    font-size: 40px;
 }
 
 .project_row h2{
+    padding-left: 2%;
+    width: 100%;
     text-align: left;
     text-shadow: 2px 2px 4px #000000;
     font-size: 30px;
+}
+
+.project_row h3{
+    padding-left: 2%;
+    width: 75%;
+    text-align: left;
+    text-shadow: 2px 2px 4px #000000;
+    font-size: 19px;
 }
 
 
